# Qt-X-QxOrm

./: .gitignore  CMakeLists.txt  README.md  TestQxOrm.qxee
qtApp/: CMakeLists.txt  Main.qml  QSingleton.h  appController.cpp  appController.h  main.cpp  projectListModel.cpp  projectListModel.h  userListModel.cpp  userListModel.h
